all fig-alts fixed

--- a/ideas/posts/2023/11/06/how-to-open-science.qmd
+++ b/ideas/posts/2023/11/06/how-to-open-science.qmd
@@ -71,7 +71,7 @@ Pre-registration involves completing a form before you start your analysis to ex
 
 Below is an example of a pre-registration.
 
-![](images/pre-registration.png){fig-alt="Screengrab of a pre-registration document, detailing a research project's hypothesis, study type, and study design."}
+![](images/pre-registration.png){fig-align="center" fig-alt="Screengrab of a pre-registration document, detailing a research project's hypothesis, study type, and study design."}
 :::
 
 ### Step 1 {#step-1}
@@ -118,7 +118,7 @@ This is by no means a complete list but instead features the apps and websites t
 
 OSF is a free web app that supports researchers with sharing, archiving, registration and collaboration. The [Open Science Framework website](https://help.osf.io) is worth checking out and includes a guide to help users get started. Once a project is public in the OSF it will have a DOI and a permanent link, so it can be cited. OSF can also support the tracking of versions of your file. One drawback can be that there is a limit on the maximum size of file that can be uploaded.
 
-![](images/osf.png){width="80%" fig-align="center" fig-alt="Screengrab of an Open Science Framework repository for a project titled 'Why "one size fits all" is not enough when designing COVID-19 immunity certificates for domestic use.'"}
+![](images/osf.png){width="80%" fig-align="center" fig-alt="Screengrab of an Open Science Framework repository for a project titled 'Why one size fits all is not enough when designing COVID-19 immunity certificates for domestic use.'"}
 
 ::: {.figure-caption style="text-align: center;"}
 Sample OSF repository.
@@ -142,8 +142,6 @@ GitHub is a web app that offers distributed version control. It is very commonly
 In my case, my project did not involve a heavy amount of coding or a large number of researchers, so I opted to use [OSF](https://osf.io/jubv6/) to store the ethics approval documents, the survey questions (which drove the data collection), the data in .csv format, and the outputs. I also then linked this to [Figshare](https://brunel.figshare.com/articles/dataset/Why_one_size_fits_all_is_not_enough_when_designing_COVID-19_immunity_certificates_for_domestic_use_a_UK_wide_cross-sectional_online_survey/16962895) from my institution and published the article on [MedRxiv](https://www.medrxiv.org/content/10.1101/2021.10.12.21264898v2) at the same time as I submitted it to a journal for review. The paper was eventually published in [BMJ Open](https://bmjopen.bmj.com/content/12/4/e058317). The steps I took in this case were sufficient for the work to be recognised as embracing open science principles.
 
 ## Plot your own route to open science
-
-<!-- ![](images/flowchart-revised.png){fig-align="center"} -->
 
 ```{mermaid}
 flowchart TD
