--- a/case-studies/posts/2023/11/16/learning-from-failure.qmd
+++ b/case-studies/posts/2023/11/16/learning-from-failure.qmd
@@ -38,7 +38,7 @@ For example, a typical dorm in a correctional center might have four JCOs assign
 
 This was replicated across every dorm. Three dorms, for example, would produce nearly 500 hours of footage, as seen below.
 
-![](images/jcos-recording-totals-across-dorms.png)
+![](images/jcos-recording-totals-across-dorms.png){fig-align="center"}
 
 ::: {.figure-caption style="text-align: center;"}
 **Figure 2:** Three dorms x four JCOs x 40 hours per week = 480 hours of footage.
@@ -99,25 +99,25 @@ In order to operationalize the "red flags" from our brainstorming session, I nee
 Using these fields, I first created the following **aggregations per employee ID**:
 
 ::: {layout-nrow="2"}
-![**Number of clips** = Number of clips recorded.](images/film.png)
+![**Number of clips** = Number of clips recorded.](images/film.png){fig-align="left"}
 
-![**Days with footage** = Number of discrete dates that appear in these clips.](images/calendar.png)
+![**Days with footage** = Number of discrete dates that appear in these clips.](images/calendar.png){fig-align="left"}
 
-![**Footage hours** = Total duration of all shot footage.](images/clock.png)
+![**Footage hours** = Total duration of all shot footage.](images/clock.png){fig-align="left"}
 
-![**Significant gaps** = Number of clips where the previous clip's end date was either greater than 15 minutes or less than eight hours before current clip's start date.](images/caution.png)
+![**Significant gaps** = Number of clips where the previous clip's end date was either greater than 15 minutes or less than eight hours before current clip's start date.](images/caution.png){fig-align="left"}
 :::
 
 I used these aggregations to devise the following **staff metrics**:
 
 ::: {layout-nrow="2"}
-![**Clips per day** = Number of clips / Days with footage.](images/clip-per-day.png){width="300px"}
+![**Clips per day** = Number of clips / Days with footage.](images/clip-per-day.png){fig-align="left"}
 
-![**Footage per day** = Footage hours / Days with footage.](images/footage-per-day.png){width="300px"}
+![**Footage per day** = Footage hours / Days with footage.](images/footage-per-day.png){fig-align="left"}
 
-![**Average clip length** = Footage hours / Number of clips.](images/avg-clip-length.png){width="300px"}
+![**Average clip length** = Footage hours / Number of clips.](images/avg-clip-length.png){fig-align="left"}
 
-![**Gaps per day** = Gaps / Days with footage.](images/gaps-per-day.png){width="300px"}
+![**Gaps per day** = Gaps / Days with footage.](images/gaps-per-day.png){fig-align="left"}
 :::
 
 Once I established these metrics for each employee I looked at their respective distributions. Standard staff shift lengths at the time were eight hours. If staff were using their cameras appropriately, we would expect to see distributions centered around clip lengths of about an hour, eight or fewer clips per day, and 8-12 footage hours per day. We would also expect to see 0 large gaps.
