image and alt-text added

--- a/case-studies/posts/2023/11/16/learning-from-failure.qmd
+++ b/case-studies/posts/2023/11/16/learning-from-failure.qmd
@@ -9,9 +9,10 @@ categories:
   - Data analysis
   - Monitoring
 author: "Noah Wright"
-date: last-modified
-date-format: long
+date: 11/16/2023
 toc: true
+image: images/bodycam-monitor.png
+image-alt: Computer monitor displaying bodycam recordings, primary colours, digital art. Created using Bing Image Creator.
 ---
 
 Incarcerated youth are an exceptionally vulnerable population, and body-worn cameras are an important tool of accountability both for those incarcerated and the staff who supervise them. In 2018 the Texas Juvenile Justice Department (TJJD) deployed body-worn cameras for the first time, and this is a case study of how the agency developed a methodology for measuring the success of the camera rollout. This is also a case study of analysis failure, as it became clear that real-world implementation problems were corrupting the data and rendering the methodology unusable. However, the process of working through the causes of this failure helped the agency identify previously unrecognized problems and ultimately proved to be of great benefit. The purpose of this case study is to demonstrate how negative findings can still be incredibly useful in real-world settings.
